[gd_scene load_steps=8 format=2]

[ext_resource path="res://Wallnode.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprite-0001.png" type="Texture" id=2]
[ext_resource path="res://Player.gd" type="Script" id=3]
[ext_resource path="res://NicePng_black-splash-png_583293.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.5, 8.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 136 )

[node name="World" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerNode" type="Node2D" parent="."]

[node name="Player" type="KinematicBody2D" parent="PlayerNode"]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/Player"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="PlayerNode/Player"]
texture = ExtResource( 2 )

[node name="Detect" type="Area2D" parent="PlayerNode/Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/Player/Detect"]
shape = SubResource( 2 )

[node name="Resetter" type="Area2D" parent="PlayerNode/Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/Player/Resetter"]
position = Vector2( -304, 0 )
shape = SubResource( 3 )

[node name="Light2D" type="Light2D" parent="PlayerNode/Player"]
texture = ExtResource( 4 )
shadow_enabled = true

[node name="Wallnode" parent="." instance=ExtResource( 1 )]
position = Vector2( 320, 0 )

[node name="Wallnode2" parent="." instance=ExtResource( 1 )]
position = Vector2( 400, 8 )

[node name="Wallnode3" parent="." instance=ExtResource( 1 )]
position = Vector2( 480, 0 )

[node name="Wallnode4" parent="." instance=ExtResource( 1 )]
position = Vector2( 560, -8 )

[node name="Wallnode5" parent="." instance=ExtResource( 1 )]
position = Vector2( 640, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.0627451, 0.0901961, 0.152941, 1 )
position = Vector2( 0, 1.52588e-05 )
scale = Vector2( 200, 200 )
z_index = -5
texture = ExtResource( 2 )

[connection signal="area_entered" from="PlayerNode/Player/Detect" to="PlayerNode/Player" method="_on_Detect_area_entered"]
[connection signal="body_entered" from="PlayerNode/Player/Detect" to="PlayerNode/Player" method="_on_Detect_body_entered"]
[connection signal="body_entered" from="PlayerNode/Player/Resetter" to="PlayerNode/Player" method="_on_Resetter_body_entered"]
